--- a/app/src/main/res/layout/activity_show_all_jorneys.xml
+++ b/app/src/main/res/layout/activity_show_all_jorneys.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".journey.ShowAllJourneysActivity">
+    tools:context=".journey.activity.ShowAllJourneysActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,20 +16,23 @@
         <ImageButton
             android:id="@+id/imageButton"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/flag" />
+            android:src="@drawable/flag"
+            android:background="@color/white"/>
 
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/binoculars" />
+            android:src="@drawable/binoculars"
+            android:background="@color/white"/>
 
     </LinearLayout>
 
     <View
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
@@ -39,7 +42,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <!-- RecyclerView content goes here -->
     </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
