--- a/app/src/main/res/layout/journey_card_layout.xml
+++ b/app/src/main/res/layout/journey_card_layout.xml
@@ -18,14 +18,14 @@
         android:animateLayoutChanges="true"
 
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
 
         <ImageView
             android:id="@+id/cardImg"
-            android:layout_width="200dp"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginRight="10dp"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
         <LinearLayout
@@ -38,7 +38,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:textSize="18sp"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 tools:text="@tools:sample/cities" />
 
             <TextView
