--- a/app/src/main/res/layout/activity_show_all_jorneys.xml
+++ b/app/src/main/res/layout/activity_show_all_jorneys.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".journey.activity.ShowAllJourneysActivity">
+    tools:context=".journey.ShowAllJourneysActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
