--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name ="shrine_purple_100">#E8DAFD</color>
+    <color name ="gray_100">#F4F6FC</color>
 </resources>
