--- a/app/src/main/res/layout/activity_show_all_jorneys.xml
+++ b/app/src/main/res/layout/activity_show_all_jorneys.xml
@@ -44,4 +44,11 @@
         android:layout_weight="1">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        style="@style/Widget.App.BottomNavigationView"/>
+
 </LinearLayout>
