Finish all the views: home - login - register

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name ="shrine_purple_100">#E8DAFD</color>
+    <color name ="shrine_purple_200">#C69AFF</color>
     <color name ="gray_100">#F4F6FC</color>
 </resources>
