--- a/app/src/main/res/layout/activity_home_login.xml
+++ b/app/src/main/res/layout/activity_home_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/name"
@@ -80,10 +81,10 @@
         android:fontFamily="@font/poppinsregular"/>
 
     <Button
-        android:id="@+id/google"
+        android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Continuar con Google"
+        android:text="Registrarte"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
@@ -91,14 +92,14 @@
         android:background="#C69AFF"/>
 
     <Button
-        android:id="@+id/facebook"
+        android:id="@+id/google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Continuar con Facebook"
+        android:text="Continuar con Google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/google"
+        app:layout_constraintTop_toBottomOf="@id/register"
         android:background="#C69AFF"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
