--- a/app/src/main/res/layout/activity_register_journey.xml
+++ b/app/src/main/res/layout/activity_register_journey.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/registerJourneyButton"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -25,7 +25,7 @@
             />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/viewJourneysButton"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
