--- a/app/src/main/res/layout/activity_show_all_jorneys.xml
+++ b/app/src/main/res/layout/activity_show_all_jorneys.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/registerJourneyButton"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -22,7 +22,7 @@
             android:background="@color/white"/>
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/viewJourneysButton"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
