--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -18,11 +18,12 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navMenu"
+        style="@style/Widget.App.BottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        style="@style/Widget.App.BottomNavigationView"/>
+        tools:layout_editor_absoluteX="0dp" />
 
     <ScrollView
         android:layout_width="match_parent"
