--- a/app/src/main/res/layout/score_challenge_card.xml
+++ b/app/src/main/res/layout/score_challenge_card.xml
@@ -8,7 +8,7 @@
     android:layout_marginVertical="20dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
-    tools:context=".ScoreChallenge">
+    tools:context="com.example.myapplicationviews.ScoreChallenge">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cScore"
