Show all routes and selected route added

--- a/app/src/main/res/layout/fragment_show_selected_route.xml
+++ b/app/src/main/res/layout/fragment_show_selected_route.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".routes.MyRoute">
+    tools:context=".routes.ShowSelectedRouteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/route"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
