--- a/app/src/main/res/layout/fragment_friends_routes.xml
+++ b/app/src/main/res/layout/fragment_friends_routes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".routes.MyRoutes">
+    tools:context=".routes.ShowAllRoutesFragment">
 
     <TextView
         android:id="@+id/textView2"
