--- a/app/src/main/res/layout/fragment_show_all_routes.xml
+++ b/app/src/main/res/layout/fragment_show_all_routes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".routes.MyRoutes">
+    tools:context=".routes.ShowAllRoutesFragment">
 
     <TextView
         android:id="@+id/textView2"
@@ -21,12 +21,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.0" />
