--- a/app/src/main/res/layout/fragment_share_route.xml
+++ b/app/src/main/res/layout/fragment_share_route.xml
@@ -11,11 +11,11 @@
         android:id="@+id/imageView2"
         android:layout_width="308dp"
         android:layout_height="173dp"
-        android:layout_marginStart="48dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="1dp"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toTopOf="@+id/buttomCamera"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
@@ -25,7 +25,7 @@
         android:id="@+id/buttomCamera"
         android:layout_width="118dp"
         android:layout_height="52dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#E1CCFB"
@@ -40,17 +40,17 @@
         android:id="@+id/buttomGallery"
         android:layout_width="118dp"
         android:layout_height="52dp"
-        android:layout_marginStart="52dp"
         android:layout_marginTop="1dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#E1CCFB"
         android:drawableBottom="@drawable/ic_buttom_gallery"
-        android:fontFamily="@font/poppins_regular"
 
+        android:fontFamily="@font/poppins_regular"
         app:layout_constraintBottom_toTopOf="@+id/editText"
-        app:layout_constraintStart_toEndOf="@+id/buttomCamera"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.625"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintWidth_percent="0.5" />
 
     <EditText
@@ -60,7 +60,7 @@
         android:layout_margin="15dp"
         android:fontFamily="@font/poppins_bold"
         android:hint="Route Name:"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.551"
@@ -69,14 +69,14 @@
         app:layout_constraintVertical_bias="0.357" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:layout_marginBottom="176dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Distancia:\n\nAltura:\n\nVelocidad promedio:\n\nCalificación obtenida:\n\nDuración:"
-        android:textSize="20sp"
+        android:text="Distancia:\n\nAltura maxima:\n\nAltura minima:\n\nVelocidad promedio:\n\nCalificación obtenida:\n\nDuración:\n\nFecha de la ruta:"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
@@ -88,7 +88,7 @@
         android:id="@+id/bShareRoute"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="#C69AFF"
         android:fontFamily="@font/poppins_regular"
         android:text="Share Route"
@@ -96,9 +96,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigaton"
