--- a/app/src/main/res/layout/card_friend.xml
+++ b/app/src/main/res/layout/card_friend.xml
@@ -27,14 +27,30 @@
             android:layout_height="80dp"
             android:layout_marginRight="10dp"/>
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="210dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name Lastname"
-            android:layout_marginRight="20dp"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:text="Name Lastname"
+                android:layout_marginRight="20dp"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/phone"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:text="Friend Phone Number"
+                android:layout_marginRight="20dp"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
