UPDATE: improved UI

--- a/app/src/main/res/layout/fragment_show_all_routes.xml
+++ b/app/src/main/res/layout/fragment_show_all_routes.xml
@@ -23,7 +23,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="550dp"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
