--- a/app/src/main/res/layout/card_route.xml
+++ b/app/src/main/res/layout/card_route.xml
@@ -22,10 +22,12 @@
 
         <ImageView
             android:id="@+id/cardImg"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/custom_image_view_card"/>
+            android:background="@drawable/circular_image"
+            android:scaleType="centerCrop"
+            />
 
         <LinearLayout
             android:layout_width="150dp"
