--- a/app/src/main/res/layout/fragment_show_selected_route.xml
+++ b/app/src/main/res/layout/fragment_show_selected_route.xml
@@ -27,9 +27,9 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:layout_marginBottom="15dp"
-            android:scaleType="fitCenter" />
+            android:scaleType="centerCrop" />
 
 
         <LinearLayout
