--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="message_color"> #7B7765 </color>
-    <color name="violet">#2196F3</color>
+    <color name="violet">#FF1F1F</color>
     <color name="green">#4CAF50</color>
+    <color name="red">#AF4C4C</color>
+
 </resources>
