--- a/app/src/main/res/layout/card_friend.xml
+++ b/app/src/main/res/layout/card_friend.xml
@@ -5,7 +5,7 @@
     android:id="@+id/Card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="20dp"
     android:animateLayoutChanges="true"
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp"
@@ -25,6 +25,7 @@
             android:id="@+id/cardImg"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:src="@drawable/img_default_avatar"
             android:layout_marginRight="10dp"/>
 
         <LinearLayout
@@ -33,13 +34,21 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/user"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                android:layout_marginRight="20dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/name"
                 android:layout_width="210dp"
                 android:layout_height="wrap_content"
                 android:text="Name Lastname"
                 android:layout_marginRight="20dp"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/phone"
@@ -47,8 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="Friend Phone Number"
                 android:layout_marginRight="20dp"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
