--- a/app/src/main/res/layout/fragment_show_all_routes.xml
+++ b/app/src/main/res/layout/fragment_show_all_routes.xml
@@ -7,13 +7,13 @@
     tools:context=".routes.ShowAllRoutesFragment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="30dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
-        android:text="My Routes"
+        android:text="@string/my_routes"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,12 +23,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
