--- a/app/src/main/res/layout/card_friend.xml
+++ b/app/src/main/res/layout/card_friend.xml
@@ -6,61 +6,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:animateLayoutChanges="true"
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:animateLayoutChanges="true"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="5dp">
-
-
-        <ImageView
-            android:id="@+id/cardImg"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/img_default_avatar"
-            android:layout_marginRight="10dp"/>
+        android:padding="20dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/linear_layout"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical">
 
-            <TextView
-                android:id="@+id/user"
-                android:layout_width="210dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
-                android:layout_marginRight="20dp"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:orientation="vertical"
+                android:layout_toEndOf="@id/cardImg">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="210dp"
-                android:layout_height="wrap_content"
-                android:text="Name Lastname"
-                android:layout_marginRight="20dp"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/user"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="Username"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/phone"
-                android:layout_width="210dp"
-                android:layout_height="wrap_content"
-                android:text="Friend Phone Number"
-                android:layout_marginRight="20dp"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="Name Lastname"
+                    android:textSize="12sp" />
 
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="Friend Phone Number"
+                    android:textSize="12sp" />
+            </LinearLayout>
         </LinearLayout>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/location_icon"
+            android:layout_toEndOf="@+id/linear_layout"
+            android:layout_marginEnd="10dp" />
 
-    </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/routes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_nav_route"
+            android:layout_toEndOf="@+id/location" />
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
