--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -21,8 +21,8 @@
 
     <ListView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="534dp"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
