--- a/app/src/main/res/layout/fragment_show_all_routes.xml
+++ b/app/src/main/res/layout/fragment_show_all_routes.xml
@@ -22,8 +22,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="381dp"
+        android:layout_height="530dp"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigaton"
         app:layout_constraintEnd_toEndOf="parent"
